<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateActivity">

    <EditText
        android:id="@+id/etCreateName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/product_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/etCreatePrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCreatePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/imageChoicesContainer"
        app:layout_constraintEnd_toEndOf="@+id/etCreateName"
        app:layout_constraintStart_toStartOf="@+id/etCreateName"
        app:layout_constraintTop_toBottomOf="@+id/etCreateName" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etCreateName"
        app:layout_constraintStart_toStartOf="@+id/etCreateName"
        app:layout_constraintTop_toBottomOf="@+id/choice2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/imageChoicesContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/choice2"
        app:layout_constraintEnd_toEndOf="@+id/etCreateName"
        app:layout_constraintStart_toStartOf="@+id/etCreateName"
        app:layout_constraintTop_toBottomOf="@+id/etCreatePrice" />

    <ImageView
        android:id="@+id/choice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/imageChoicesContainer" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_choice"
        app:layout_constraintBottom_toBottomOf="@+id/choice2"
        app:layout_constraintEnd_toStartOf="@+id/choice2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/choice2" />


</androidx.constraintlayout.widget.ConstraintLayout>